@@ -298,6 +298,7 @@ namespace evf
 
     unsigned long long               idleProcStats_;
     unsigned long long               allProcStats_;
+    timeval                          lastProcReport_;
   };
 
   
